--- a/SOAD/fitbuddy/static/css/layout.css
+++ b/SOAD/fitbuddy/static/css/layout.css
@@ -12,11 +12,13 @@ File: Layout CSS
 /*@import url("fontawesome-all.min.css");*/
 @import url("framework.css");
 
-$('.smooth-goto').on('click', function() {
-    $('html, body').animate({scrollTop: $(this.hash).offset().top - 50}, 1000);
-    return false;
-});
-
+/*$('.smooth-goto').on('click', function() {*/
+/*    $('html, body').animate({scrollTop: $(this.hash).offset().top - 50}, 1000);*/
+/*    return false;*/
+/*});*/
+html {
+  scroll-behavior: smooth;
+}
 /* Rows
 --------------------------------------------------------------------------------------------------------------- */
 .row0, .row0 a{}
