--- a/SOAD/templates/fitbuddy/home.html
+++ b/SOAD/templates/fitbuddy/home.html
@@ -6,7 +6,154 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script>
+$(document).ready(function(){
+  // Add smooth scrolling to all links
+  $("a").on('click', function(event) {
+
+    // Make sure this.hash has a value before overriding default behavior
+    if (this.hash !== "") {
+      // Prevent default anchor click behavior
+      event.preventDefault();
+
+      // Store hash
+      var hash = this.hash;
+
+      // Using jQuery's animate() method to add smooth page scroll
+      // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
+      $('html, body').animate({
+        scrollTop: $(hash).offset().top
+      }, 800, function(){
+
+        // Add hash (#) to URL when done scrolling (default click behavior)
+        window.location.hash = hash;
+      });
+    } // End if
+  });
+});
+</script>
   <link href="static/css/layout.css" rel="stylesheet" type="text/css" media="all">
+  <style>
+    /* Full-width input fields */
+input[type=text], input[type=password] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+
+/* Set a style for all buttons */
+button {
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+}
+
+button:hover {
+  opacity: 0.8;
+}
+
+/* Extra styles for the cancel button */
+.cancelbtn {
+  width: auto;
+  padding: 10px 18px;
+  background-color: #f44336;
+}
+
+/* Center the image and position the close button */
+.imgcontainer {
+  text-align: center;
+  margin: 24px 0 12px 0;
+  position: relative;
+}
+
+img.avatar {
+  width: 40%;
+  border-radius: 50%;
+}
+
+.container {
+  padding: 16px;
+}
+
+span.psw {
+  float: right;
+  padding-top: 16px;
+}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  padding-top: 60px;
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button (x) */
+.close {
+  position: absolute;
+  right: 25px;
+  top: 0;
+  color: #000;
+  font-size: 35px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: red;
+  cursor: pointer;
+}
+
+/* Add Zoom Animation */
+.animate {
+  -webkit-animation: animatezoom 0.6s;
+  animation: animatezoom 0.6s
+}
+
+@-webkit-keyframes animatezoom {
+  from {-webkit-transform: scale(0)}
+  to {-webkit-transform: scale(1)}
+}
+
+@keyframes animatezoom {
+  from {transform: scale(0)}
+  to {transform: scale(1)}
+}
+
+/* Change styles for span and cancel button on extra small screens */
+@media screen and (max-width: 300px) {
+  span.psw {
+     display: block;
+     float: none;
+  }
+  .cancelbtn {
+     width: 100%;
+  }
+}
+  </style>
 </head>
 <body id="top">
 <div class="wrapper row0">
@@ -16,8 +163,12 @@
         <li><a href="/"><i class="fas fa-home"></i></a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
-        <li><a href="{% url 'login' %}">Login</a></li>
-        <li><a href="#cr" class="smooth-goto">Register</a></li>
+        {% if request.user.is_authenticated %}
+        <li><a href="{% url 'logout' %}">Logout</a></li>
+        {% else %}
+        <li><a href="{% url 'login' %}" >Login</a></li>
+        <li><a href="#register" class="smooth-goto">Register</a></li>
+        {% endif %}
       </ul>
     </div>
 
@@ -68,7 +219,7 @@
             <li><a href="{% url 'logout' %}">logout</a></li>
       {% else %}
       <li><a href="{% url 'login' %}">login</a></li>
-      <li><a href="{% url 'register' %}">register</a></li>
+      <li><a href="#register" class="smooth-goto">register</a></li>
       {% endif %}
     </ul>
   </nav>
@@ -143,15 +294,14 @@
 </div>
 <div class="wrapper gradient">
   <section id="testimonials" class="hoc container clear">
-    <!-- ################################################################################################ -->
     <div class="sectiontitle">
-      <h6 id = "cr" class="heading">Registration</h6>
+      <h6 id = "register" class="heading">Registration</h6>
     </div>
     <article class="one_half first"><img src="static/img/c5.png" alt="">
       <div class="card-body">
                     <div class="row">
                        <div class="col-lg-6">
-                        <a type="button" class="btn btn-block" href="{% url 'customer_register' %}">I am a customer</a>
+                        <a type="button" class="btn btn-block" href="{% url 'customer_register' %}">Resgister as customer</a>
                        </div></div>
                 </div>
     </article>
@@ -159,10 +309,9 @@
       <div class="card-body">
 
                        <div class="col-lg-6">
-                        <a type="button" class="btn btn-block" href="{% url 'fitness_register' %}">I am a fitness center</a>
+                        <a type="button" class="btn btn-block" href="{% url 'fitness_register' %}">Resgister as fitness center</a>
                        </div>
                 </div></article>
-    <!-- ################################################################################################ -->
   </section>
 </div>
 </body>
