Google font change trail

--- a/SOAD/fitbuddy/static/css/framework.css
+++ b/SOAD/fitbuddy/static/css/framework.css
@@ -1,4 +1,7 @@
-@charset "utf-8";
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+
+/* @charset "utf-8"; */
 /*
 Template Name: Surogou
 Author: <a href="https://www.os-templates.com/">OS Templates</a>
@@ -55,7 +58,7 @@ img{width:auto; max-width:100%; height:auto; margin:0; padding:0; border:none; l
 /* Fonts
 --------------------------------------------------------------------------------------------------------------- */
 body, input, textarea, select{font-family:Verdana, Geneva, sans-serif;}
-h1, h2, h3, h4, h5, h6, .heading{font-family:Georgia, "Times New Roman", Times, serif;}
+h1, h2, h3, h4, h5, h6, .heading{font-family:Poppins, 'Poppins', Poppins, Poppins;}
 
 
 /* Forms
