--- a/SOAD/templates/fitbuddy/home.html
+++ b/SOAD/templates/fitbuddy/home.html
@@ -2,16 +2,21 @@
 <html lang="">
 <head>
   <link rel="icon" href="static/img/sun.png">
-  <title>FITBUDDY</title>
+  <title> FITBUDDY</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   <link href="static/css/layout.css" rel="stylesheet" type="text/css" media="all">
+  <style>
+    body{
+      font-family: 'Poppins'; 
+    }
+  </style>
 </head>
 <body id="top">
 <div class="wrapper row0">
-  <div id="topbar" class="hoc clear">
-    <div class="fl_left">
+  <div id="topbar" class="hoc clear" >
+    <div class="fl_left";>
       <ul class="nospace">
         <li><a href="/"><i class="fas fa-home"></i></a></li>
         <li><a href="#">About</a></li>
@@ -31,10 +36,10 @@
 <div class="wrapper row1">
   <header id="header" class="hoc clear"> 
     <div id="logo" class="one_half first">
-      <h1 class="logoname"><a href="/"><span>Fit</span>Buddy</a></h1>
+      <h1 class="logoname"; style="font-family: MinecrafterReg" ><a href="/"><span>Fit</span>Buddy</a></h1>
     </div>
 
-<div class="one_half">
+<div class="one_half";  style= 'font-family:Suez One'; >
   Fit Buddy is like a virtual trainer and nutritionist in one, with hundreds of workouts to tackle at home or at the gym, plus personalized meal plans and recipes.
     All exercises feature clear instructions and videos, and progressive workout plans make this ideal for beginners or advanced lifters.
 
@@ -80,9 +85,9 @@
   </nav>
 </div>
 <div class="wrapper bgded overlay" style="background-image:url('static/img/fit2.png');">
-  <div id="pageintro" class="hoc clear">
+  <div id="pageintro" class="hoc clear"; >
     <article>
-      <h3 class="heading">Fitness</h3>
+      <h3 class="heading" style="font-family: 'Viga'; font-size: 42px;">Fitness</h3>
       is like a relationship.
       you can't cheat and expect it to work.
       <footer><a class="btn" href="#">join and be helathy</a></footer>
