--- a/SOAD/templates/fitbuddy/add_program.html
+++ b/SOAD/templates/fitbuddy/add_program.html
@@ -1,33 +1,103 @@
 {% load static %}
 {% load crispy_forms_tags %}
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add a program</title>
+  <link rel="icon" href="{% static 'img/sun.png' %}">
+  <title>FITBUDDY</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+  <link href="{% static 'css/layout.css' %}" rel="stylesheet" type="text/css" media="all">
+  <link href="{% static 'css/forms.css' %}" rel="stylesheet" type="text/css" media="all">
 </head>
+<body id="top">
+<div class="wrapper row0">
+  <div id="topbar" class="hoc clear">
+    <div class="fl_left">
+      <ul class="nospace">
+        <li><a href="/"><i class="fas fa-home"></i></a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="{% url 'login' %}">Login</a></li>
+        <li><a href="{% url 'register' %}">Register</a></li>
+      </ul>
+    </div>
 
+  </div>
+</div>
+<div class="wrapper row1">
+  <header id="header" class="hoc clear"> 
+    <div id="logo" class="one_half first">
+      <h1 class="logoname"><a href="/"><span>Fit</span>Buddy</a></h1>
+    </div>
+
+<div class="one_half">
+  Fit Buddy is like a virtual trainer and nutritionist in one, with hundreds of workouts to tackle at home or at the gym, plus personalized meal plans and recipes.
+    All exercises feature clear instructions and videos, and progressive workout plans make this ideal for beginners or advanced lifters.
+
+</div>
+
+    </header>
+  <nav id="mainav" class="hoc clear">
+    <ul class="clear">
+      <li class="active"><a href="/">Home</a></li>
+      <li><a class="drop" href="#">Fitness Centres</a>
+        <ul>
+          <li><a href="#">first</a></li>
+          <li><a href="#">second</a></li>
+          <li><a href="#">third</a></li>
+          <li><a href="#">fourth</a></li>
+          <li><a href="#">fifth</a></li>
+          <li><a href="#">sixth</a></li>
+        </ul>
+      </li>
+      <li><a class="drop" href="#">Dropdown</a>
+        <ul>
+          <li><a href="#">Level 2</a></li>
+          <li><a class="drop" href="#">Level 2 + Drop</a>
+            <ul>
+              <li><a href="#">Level 3</a></li>
+              <li><a href="#">Level 3</a></li>
+              <li><a href="#">Level 3</a></li>
+            </ul>
+          </li>
+          <li><a href="#">Level 2</a></li>
+        </ul>
+      </li>
+      <li><a href="#">about</a></li>
+      <li><a href="#">contact</a></li>
+      {% if request.user.is_authenticated %}
+            <li><a href="{% url 'logout' %}">logout</a></li>
+      {% else %}
+      <li><a href="{% url 'login' %}">login</a></li>
+      <li><a href="{% url 'register' %}">register</a></li>
+      {% endif %}
+    </ul>
+  </nav>
+</div>
 <body>
-                
-    <div style="width:40%;height: 70%;padding-top: 2%;margin-left: 30%;padding-bottom: 3%">
-      <form method="POST" enctype="multipart/form-data"> 
-            {% csrf_token %}
-            {{ form.title|as_crispy_field }}
-            {{ form.category|as_crispy_field }}
-            {{ form.number_of_sessions|as_crispy_field }}
-            {{ form.hours_per_session|as_crispy_field }}
-            {{ form.description|as_crispy_field }}
-            {{ form.price|as_crispy_field }}
-            {{ form.image|as_crispy_field }}
-            <div class="form-group">
-                  <button class="btn btn-outline-info" type="submit" style="background-color: #008CBA">Upload</button>
+           <div class="login-page">
+            <div class="form">
+              <form class="login-form" method="POST" enctype="multipart/form-data">
+                {% csrf_token %}
+                <h2>ADD A PROGRAM</h2>
+                {{ form.title|as_crispy_field }}
+                  {{ form.category|as_crispy_field }}
+                  {{ form.number_of_sessions|as_crispy_field }}
+                  {{ form.hours_per_session|as_crispy_field }}
+                  {{ form.description|as_crispy_field }}
+                  {{ form.price|as_crispy_field }}
+                  {{ form.image|as_crispy_field }}
+                <button>Upload</button>
+              </form>
             </div>
-      </form>
-     </div> 
-            
-
+          </div>
 </body>
-
+</body>
 </html>
+<script>
+      $('.message a').click(function(){
+       $('form').animate({height: "toggle", opacity: "toggle"}, "slow");
+    });
+</script>
