--- a/SOAD/templates/fitbuddy/customer_register.html
+++ b/SOAD/templates/fitbuddy/customer_register.html
@@ -1,4 +1,3 @@
-{% load crispy_forms_tags %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,23 +7,56 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
     crossorigin="anonymous">
     <title>Demo Registration</title>
+<!--        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">-->
+{% block head %}
+        {% load static %}
+      <link rel="icon" href="{% static 'img/log.png' %}">
+
+    <style>
+    html, body{
+        background-image: url("{% static 'img/bg1.png' %}");
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        height: 100%;
+        font-family: 'Numans', sans-serif;
+    }
+        div.ex2 {
+            text-align: center;
+            color: black;
+        }
+    </style>
+        {% endblock %}
+
 </head>
 <body>
-
-    <section>
+<div class="ex2"><br><br><br><br><br>
         <div class="container">
-          <form method="POST"> 
-            {% csrf_token %}
-            <fieldset class="form-group">
-                 <h2 class="border-bottom mb-4">REGISTER </h2>
-                 {{ form|crispy}}
-            </fieldset>
-            <div class="form-group">
-                  <button class="btn btn-outline-info" type="submit" style ="background-color: #008CBA;">Sign up</button>
-            </div>
-      </form>
-        </div>
-      </section>
+            <div class='col-sm-5 col-sm-offset-0'>
+                <div class='panel panel-default'>
+                    <div class='panel-heading'><h2>Create New Account</h2></div>
+                    <div class='panel-body'>
+                        <form method="POST">
+                            {% csrf_token %}
+                            <table border="1">
+                                {% for field in form %}
+                                    <p>
+                                        {{ field.label_tag }}<br>
+                                        {{ field }}
+                                        {% for error in field.errors %}
+                                            <p style="color:red">{{ error }}</p>
+                                        {% endfor %}
+                                    </p>
+                                {% endfor %}
+                            </table>
+                            <button type="submit">Signup</button>
+                        </form>
+                        <p>already having and wanna <a href="/login/">login</a></p>
 
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
