search & filter programs done

--- a/SOAD/templates/fitbuddy/home.html
+++ b/SOAD/templates/fitbuddy/home.html
@@ -90,7 +90,7 @@
       <h3 class="heading" style="font-family: 'Viga'; font-size: 42px;">Fitness</h3>
       is like a relationship.
       you can't cheat and expect it to work.
-      <footer><a class="btn" href="#">join and be helathy</a></footer>
+      <footer><a class="btn" href="#">join and be healthy</a></footer>
     </article>
   </div>
 </div>
