--- a/SOAD/templates/fitbuddy/add_program.html
+++ b/SOAD/templates/fitbuddy/add_program.html
@@ -20,7 +20,7 @@
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
         <li><a href="{% url 'login' %}">Login</a></li>
-        <li><a href="{% url 'register' %}">Register</a></li>
+        <li><a href="{% url 'customer_register' %}">Register</a></li>
       </ul>
     </div>
 
