--- a/SOAD/templates/fitbuddy/program_detail.html
+++ b/SOAD/templates/fitbuddy/program_detail.html
@@ -33,6 +33,7 @@
                             <p><strong>Hours per session:</strong> {{ program.hours_per_session }}</p>
                             <p class="card-text"><strong>Price :</strong> Rs{{ program.price }}</p>
                             <p class="card-text"><strong>Category :</strong> {{program.category}}</p>
+                            <p class="card-text"><strong>Average rating :</strong> {{average}}</p>
                           </div>
                       <div class='card-footer text-center'>
 
@@ -50,6 +51,54 @@
             </div>
 
       </div>
+      <br>
+    <div class="card">
+        <div class="card-body">
+            <h3 class="text-center">Add Review</h3>
+            <form action="{% url 'add_review' program.slug %}" method="POST">
+                {% csrf_token %}
+                <label for="comment">Review</label>
+                <textarea name="comment" id="comment" cols="30" rows="5" class="form-control"></textarea>
+
+                <label for="rating">Rating</label>
+                <input type="range" id="rangeInput" 
+                    name="rating" min="0" max="10" value="0" step="0.5"
+                    oninput="amount.value=rangeInput.value">                                                       
+         
+         <output name="amount" id="amount" for="rangeInput">0</output>
+                
+                <br>
+                <input type="submit" class="btn btn-danger" value="Add Review">
+            </form>
+        </div>
+    </div>
+    <br>
+    <div class="card">
+        <div class="card-body">
+            <h3 class="text-center">Reviews</h3>
+            {% for review in reviews %}
+                <div class="card" style="background-color: #f5eeee;">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-md-3">
+                                <h5 class="text-left">{{ review.user.username }}</h5>
+                                <h5>{{ review.rating }}</h5>
+                                {% if request.user == review.user %}
+                                <a href="{% url 'edit_review' program.slug review.slug %}">Edit</a>
+                                <a href="{% url 'delete_review' program.slug review.slug %}" onclick="return confirm('Are you sure you want to delete this?');">Delete</a>
+                                {% endif %}
+
+                            </div>
+                            <div class="col-md-9">
+                                <p>{{ review.comment }}</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <br>
+                {% endfor %}
+        </div>
+    </div>
       </div>
 </body>
 </html>
