--- a/SOAD/templates/fitbuddy/program_list.html
+++ b/SOAD/templates/fitbuddy/program_list.html
@@ -50,6 +50,7 @@
           </div>
         </div>
       </div>
+      <div class="container">
         <div class="row">
           {% for object in programs %}
           <div class="col-md-4 col-sm-4 col-lg-4 m-4">
@@ -69,6 +70,7 @@
             </div>
           {% endfor %}
 
+      </div>
       </div>
       </div>
 </body>
