number of ratings done

--- a/SOAD/templates/fitbuddy/program_detail.html
+++ b/SOAD/templates/fitbuddy/program_detail.html
@@ -33,6 +33,7 @@
                             <p><strong>Hours per session:</strong> {{ program.hours_per_session }}</p>
                             <p class="card-text"><strong>Price :</strong> Rs{{ program.price }}</p>
                             <p class="card-text"><strong>Category :</strong> {{program.category}}</p>
+                            <p class="card-text"><strong>Number of ratings :</strong> {{count}}</p>
                             <p class="card-text"><strong>Average rating :</strong> {{average}}</p>
                           </div>
                       <div class='card-footer text-center'>
