--- a/SOAD/templates/nutrition/home.html
+++ b/SOAD/templates/nutrition/home.html
@@ -11,15 +11,23 @@
         <tbody>
           <tr>
             <th>Height</th>
-            <td>12</td>
+            <td>{{ height }}</td>
           </tr>
           <tr>
             <th>Weight</th>
-            <td>34</td>
+            <td>{{ weight }}</td>
           </tr>
           <tr>
             <th>BMI</th>
-            <td>46</td>
+            <td>{{ bmi }}</td>
+          </tr>
+          <tr>
+            <th>Age</th>
+            <td>{{ age }}</td>
+          </tr>
+          <tr>
+            <th>Gender</th>
+            <td>{{ gender }}</td>
           </tr>
         </tbody>
       </table>
