Added part done for review

--- a/SOAD/templates/discussionForum/answers.html
+++ b/SOAD/templates/discussionForum/answers.html
@@ -2,17 +2,16 @@
 {% block content %}
 <div class="container">
     {% for ans in answers %}
-        <div class="container">
+        <div class="container bg-white rounded shadow-sm" style="margin: 40px; padding: 20px;">
             <p>{{ ans.answer }}</p>
-            <h5>By: {{ ans.answeredBy.username }}</h5>
-            <h5>On: {{ ans.date_answered }}</h5>
+            <h6>By: {{ ans.answeredBy.username }}</h6>
+            <h6>On: {{ ans.date_answered }}</h6>
             {% if request.user == ans.answeredBy %}
             <button class="btn btn-primary"> <a href="{% url 'updateAnswer' ans.id %}" style="text-decoration: none;color: white;">Update</a> </button>
             {% endif %}
             {% if request.user == ans.answeredBy %}
             <button class="btn btn-primary"> <a href="{% url 'deleteAnswer' ans.id %}" style="text-decoration: none;color: white;">Delete</a> </button>
-            {% endif %}
-            
+            {% endif %}        
         </div>
     {% endfor %}
 </div>
