--- a/SOAD/templates/nutrition/dashboard.html
+++ b/SOAD/templates/nutrition/dashboard.html
@@ -12,15 +12,15 @@
         <tbody>
           <tr>
             <th>Height</th>
-            <td>{{ height }}</td>
+            <td>{{ height }} m<sup>2</sup></td>
           </tr>
           <tr>
             <th>Weight</th>
-            <td>{{ weight }}</td>
+            <td>{{ weight }} kg</td>
           </tr>
           <tr>
             <th>BMI</th>
-            <td>{{ bmi }}</td>
+            <td>{{ bmi }} kg/m<sup>2</sup></td>
           </tr>
           <tr>
             <th>Age</th>
