--- a/SOAD/templates/discussionForum/answerQuestion.html
+++ b/SOAD/templates/discussionForum/answerQuestion.html
@@ -1,5 +1,8 @@
 {% extends 'discussionForum/home.html' %}
 {% block content %}
+<h4>
+    {{ question.question }}
+</h4>
 <form action="{% url 'answerAQuestion' qid %}" method="post">
     {% csrf_token %}
     {{ form.as_p }}
