--- a/SOAD/templates/discussionForum/home.html
+++ b/SOAD/templates/discussionForum/home.html
@@ -42,8 +42,8 @@
 
   <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Dashboard <span class="sr-only">(current)</span></a>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Dashboard</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Notifications</a>
@@ -52,7 +52,7 @@
         <a class="nav-link" href="#">Profile</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Log out</a>
+        <a class="nav-link" href="{% url 'logout' %}">Log out</a>
       </li>
     </ul>
   </div>
