--- a/SOAD/templates/discussionForum/updateQuestion.html
+++ b/SOAD/templates/discussionForum/updateQuestion.html
@@ -1,5 +1,6 @@
 {% extends 'discussionForum/home.html' %}
 {% block content %}
+<h6>You can fill any one or both the fields.</h6>
 <form action="{% url 'updateQuestion' qid %}" method="POST">
     {% csrf_token %}
     {{ form.as_p }}
