--- a/SOAD/templates/nutrition/base.html
+++ b/SOAD/templates/nutrition/base.html
@@ -35,7 +35,7 @@
   </head>
   <body>
     <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-  <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" href="#">FitBuddy</a>
+  <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" href="{% url 'home' %}">FitBuddy</a>
   <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-toggle="collapse" data-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -52,9 +52,9 @@
       <div class="sidebar-sticky pt-3">
         <ul class="nav flex-column">
           <li class="nav-item">
-            <a class="nav-link active" href="{% url 'dashboardHome' %}">
+            <a class="nav-link" href="{% url 'dashboardHome' %}">
               <!-- <span data-feather="home"></span> -->
-              Dashboard <span class="sr-only">(current)</span>
+              Dashboard</span>
             </a>
           </li>
           <li class="nav-item">
