--- a/SOAD/templates/nutrition/calorie.html
+++ b/SOAD/templates/nutrition/calorie.html
@@ -34,10 +34,24 @@
                 <label for="age"><strong>Age</strong></label>
                 <input type="number" id="age" name="age" placeholder="Enter your age">
             </div>
+            <div class="form-group">
+                <label for="activity"><strong>Activity</strong></label>
+                <select name="activity" id="activity">
+                    <option value="sedentary">Sedentary</option>
+                    <option value="low active">Low Active</option>
+                    <option value="active">Active</option>
+                    <option value="very active">Very Active</option>
+                </select>
+            </div>
             <button type="submit" class="btn btn-primary"">Submit</button>
         </form>
-        <div style="margin-top: 40px;">
-            <strong>Your BMI is {{ bmiData.bmi }}.<br> You are {{ bmiData.category }}</strong>
+        <div class="container" style="margin-top: 40px;">
+            {% if bmiData %}
+            <h4>
+                <strong>Your BMI is {{ bmiData.bmi }}.<br> You are {{ bmiData.category }}</strong><br>
+            <strong>Your expected energy requirement is {{ bmiData.calories }} kcal/day</strong>
+            </h4>
+            {% endif %}
         </div>
     </div>
 </div>       
