--- a/SOAD/templates/nutrition/base.html
+++ b/SOAD/templates/nutrition/base.html
@@ -13,6 +13,14 @@
 
     <!-- Bootstrap core CSS -->
 <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+<!-- Latest compiled and minified CSS -->
+<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">  -->
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> 
+
+<!-- Latest compiled JavaScript -->
+
 
     <style>
       .bd-placeholder-img {
@@ -97,6 +105,7 @@
 
         </div>
     </nav>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script> 
 
     
     {% block content %}
