--- a/SOAD/templates/nutrition/water.html
+++ b/SOAD/templates/nutrition/water.html
@@ -10,6 +10,6 @@
       <input type="number" name="water" id="water" />
     </form>
   </div>
-  {{ bmiData.water }}
+  {{ water }}
 </div>
 {% endblock %}
