--- a/SOAD/templates/discussionForum/home.html
+++ b/SOAD/templates/discussionForum/home.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <!-- Bootstrap core CSS -->
 <!-- <link href="{% static 'nutrition/css/bootstrap.min.css' %}" rel="stylesheet"> -->
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
       .bd-placeholder-img {
         font-size: 1.125rem;
@@ -35,7 +35,7 @@
   </head>
   <body class="bg-light">
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
-  <a class="navbar-brand mr-auto mr-lg-0" href="{% url 'home' %}">FitBuddy</a>
+  <a class="navbar-brand mr-auto mr-lg-0" href="{% url 'forum' %}">FitExchange</a>
   <button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -43,10 +43,10 @@
   <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#">Dashboard</a>
+        <a class="nav-link" href="{% url 'home' %}">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Notifications</a>
+        <a class="nav-link" href="{% url 'forum' %}">Dashboard</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Profile</a>
