Added a few apis

--- a/SOAD/templates/discussionForum/answers.html
+++ b/SOAD/templates/discussionForum/answers.html
@@ -12,6 +12,7 @@
             </select>
         </div>
     </div>  
+    <p>({{ views }} views)</p>
     {% for ans in answers %}
         <div class="container bg-white rounded shadow-sm" style="padding: 20px;">
             <div class="container" style="padding: 10px;">
