Fixes done in nutrition section

--- a/SOAD/templates/nutrition/dashboard.html
+++ b/SOAD/templates/nutrition/dashboard.html
@@ -23,8 +23,8 @@
             <td>{{ bmi }} kg/m<sup>2</sup></td>
           </tr>
           <tr>
-            <th>Age</th>
-            <td>{{ age }}</td>
+            <th>Date of Birth</th>
+            <td>{{ dob }}</td>
           </tr>
           <tr>
             <th>Gender</th>
