--- a/SOAD/templates/nutrition/calorie.html
+++ b/SOAD/templates/nutrition/calorie.html
@@ -31,8 +31,8 @@
                 </select>
             </div>
             <div class="form-group">
-                <label for="age"><strong>Age</strong></label>
-                <input type="number" id="age" name="age" placeholder="Enter your age">
+                <label for="dob">Date of Birth</label>
+                <input type="date" id="dob" name="dob" placeholder="Enter your date of birth">
             </div>
             <div class="form-group">
                 <label for="activity"><strong>Activity</strong></label>
@@ -54,5 +54,121 @@
             {% endif %}
         </div>
     </div>
-</div>       
+    <div class="container">
+        <div class="col-md-6" style="margin: 70px;"> 
+          <canvas id="myChartline"></canvas> 
+        </div>    
+      </div>
+</div>
+<script>
+    var chartType = "calorie";
+    var endpoint = "/nutrition/chart/" + chartType;
+    $.ajax({
+      method: "GET",
+      url: endpoint,
+      success: function (data) {
+        console.log(data);
+        drawLineGraph(data, "myChartline");
+        // drawBarGraph(data, 'myChartBar');
+        console.log("drawing");
+      },
+      error: function (error_data) {
+        console.log(error_data);
+      },
+    });
+  
+    function drawLineGraph(data, id) {
+      var labels = data.labels;
+      var chartLabel = data.chartLabel;
+      var chartdata = data.chartData;
+      var ctx = document.getElementById(id).getContext("2d");
+      var chart = new Chart(ctx, {
+        // The type of chart we want to create
+        type: "line",
+  
+        // The data for our dataset
+        data: {
+          labels: labels,
+          datasets: [
+            {
+              label: chartLabel,
+              backgroundColor: "rgb(255, 100, 200)",
+              borderColor: "rgb(55, 99, 132)",
+              data: chartdata,
+            },
+          ],
+        },
+  
+        // Configuration options go here
+        options: {
+          scales: {
+            xAxes: [
+              {
+                display: true,
+              },
+            ],
+            yAxes: [
+              {
+                ticks: {
+                  beginAtZero: true,
+                },
+              },
+            ],
+          },
+        },
+      });
+    }
+  
+    function drawBarGraph(data, id) {
+      var labels = data.labels;
+      var chartLabel = data.chartLabel;
+      var chartdata = data.chartdata;
+      var ctx = document.getElementById(id).getContext("2d");
+      var myChart = new Chart(ctx, {
+        type: "bar",
+        data: {
+          labels: labels,
+          datasets: [
+            {
+              label: chartLabel,
+              data: chartdata,
+              backgroundColor: [
+                "rgba(255, 99, 132, 0.2)",
+                "rgba(54, 162, 235, 0.2)",
+                "rgba(255, 206, 86, 0.2)",
+                "rgba(75, 192, 192, 0.2)",
+                "rgba(153, 102, 255, 0.2)",
+                "rgba(255, 159, 64, 0.2)",
+              ],
+              borderColor: [
+                "rgba(255, 99, 132, 1)",
+                "rgba(54, 162, 235, 1)",
+                "rgba(255, 206, 86, 1)",
+                "rgba(75, 192, 192, 1)",
+                "rgba(153, 102, 255, 1)",
+                "rgba(255, 159, 64, 1)",
+              ],
+              borderWidth: 1,
+            },
+          ],
+        },
+        options: {
+          scales: {
+            xAxes: [
+              {
+                display: true,
+              },
+            ],
+            yAxes: [
+              {
+                ticks: {
+                  beginAtZero: true,
+                },
+              },
+            ],
+          },
+        },
+      });
+    }
+</script>   
 {% endblock %}
