--- a/SOAD/templates/discussionForum/answers.html
+++ b/SOAD/templates/discussionForum/answers.html
@@ -3,16 +3,15 @@
 <div class="container">
     <div class="container">
         <div class="container"><h1>Answers</h1></div>
-        <div class="container" style="display: inline-block;">
+        <!-- <div class="container" style="display: inline-block;">
             <label for="sort">Sort By</label>
             <select name="sortCategory" id="sort">
                 <option value="votes">Most votes</option>
                 <option value="recent">Recent</option>
                 <option value="comment">Most commented</option>
             </select>
-        </div>
-    </div>  
-    <p>({{ views }} views)</p>
+        </div> -->
+    </div>
     {% for ans in answers %}
         <div class="container bg-white rounded shadow-sm" style="padding: 20px;">
             <div class="container" style="padding: 10px;">
@@ -32,7 +31,6 @@
                 <h6>On: {{ ans.date_answered }}</h6>
             </div>
             <div style="margin-left: 55px;">
-                <button class="btn btn-primary"> <a href="{% url 'comment' ans.id %}" style="text-decoration: none;color: white;">Comment</a> </button>
                 {% if request.user == ans.answeredBy %}
                     <button class="btn btn-primary"> <a href="{% url 'updateAnswer' ans.id %}" style="text-decoration: none;color: white;">Update</a> </button>
                 {% endif %}
